--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
-                  <div class="collapse navbar-collapse flex-grow-0" id="navbarNavDropdown">
+                  <div class="collapse navbar-collapse flex-grow-0 mt-3 mt-sm-0" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                       <li class="nav-item dropdown">
                         <a class="nav-link active " href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -155,7 +155,7 @@
                             <i class="fab fa-whatsapp"></i> 3402483252
                         </p>
                     </div>  
-                    <div class="col text-center">
+                    <div class="col text-center mt-3 mt-sm-0">
                         <strong>
                             Sigamos Conectados
                         </strong>   
