--- a/item.html
+++ b/item.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css" />
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-<link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
@@ -36,7 +36,7 @@
                         </a>
                         
                         <ul style="background-color: #cc0066 !important" class="dropdown-menu text-white border border-white py-2" aria-labelledby="navbarDropdownMenuLink">
-                          <li><a class="dropdown-item text-white" href="item.html">item1</a></li>
+                          <li><a class="dropdown-item text-white" href="item1.html">item1</a></li>
                           <li><a class="dropdown-item text-white" href="#">item2</a></li>
                           <li><a class="dropdown-item text-white" href="#">item</a></li>
                         </ul>
@@ -50,7 +50,7 @@
                                 <i class="fas fa-plus-circle"></i>
                              </a>
                         <ul style="background-color: #cc0066 !important" class="dropdown-menu border border-white py-2" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item text-white" href="#">item1</a></li>
+                            <li><a class="dropdown-item text-white" href="item.html">item1</a></li>
                             <li><a class="dropdown-item text-white" href="#">item2</a></li>
                             <li><a class="dropdown-item text-white" href="#">item</a></li>
                         </ul>
@@ -83,87 +83,106 @@
                     <i style="background-color: #00bb2d;font-size:45px"class="text-white fab fa-whatsapp rounded-circle p-3"></i>
                 </a>  
             </article>
-            <article style="background-color: #ffc1d3; color:black" class="py-5 p-lg-5" id="destacados">
-                <h4 class="text-center">
-                    Destacados
-                </h4>
-                <div class="swiper-container">
-                    <div class="swiper-wrapper">
-                      <div class="swiper-slide d-flex flex-column justify-content-end text-white text-center" style="background-image:url(./img/1.jpg)">
-                        <div style="background-color: #cc0066 !important; opacity: 0.6" class=" col-11 mx-auto my-2 rounded-pill">
-                            <small class="my-0">
-                                item 1 
-                            </small>  
-                           <p class="my-0">
-                                 $5000
-                           </p>
-                        </div> 
-                        
+            <article style ="background-color: #ffe0e9; "class="p-5">
+                <nav  aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                      <li class="breadcrumb-item"><a href="index.html" class="text-dark text-decoration-none">Inicio</a></li>
+                      <li class="breadcrumb-item active" aria-current="page">Item </li>
+                    </ol>
+                  </nav>
+                  <div  class="d-flex flex-wrap justify-content-between my-5">
+                      <div class=" col-lg-2">
+                            <h5>
+                               Categorias
+                            </h5>
+                            <ul class="list-unstyled">
+                                <li class="mb-2">
+                                    <a href="" class="text-decoration-none text-dark">Item 1</a>
+                                </li>
+                                <li class="mb-2">
+                                    <a href="" class="text-decoration-none text-dark">Item 2</a>
+                                </li>
+                                <li class="mb-2">
+                                    <a href="" class="text-decoration-none text-dark">Item 3</a>
+                                </li>
+                            </ul>
                       </div>
-                      <div class="swiper-slide d-flex flex-column justify-content-end text-white text-center" style="background-image:url(./img/2.jpg)">
-                        <div style="background-color: #cc0066 !important; opacity: 0.6" class=" col-11 mx-auto my-2 rounded-pill">
-                            <small class="my-0">
-                                item 1 
-                            </small>  
-                           <p class="my-0">
-                                 $5000
-                           </p>
-                        </div> 
-                    </div>
-                      <div class="swiper-slide d-flex flex-column justify-content-end text-white text-center" style="background-image:url(./img/3.png)">
-                        <div style="background-color: #cc0066 !important; opacity: 0.6" class=" col-11 mx-auto my-2 rounded-pill">
-                            <small class="my-0">
-                                item 1 
-                            </small>  
-                           <p class="my-0">
-                                 $5000
-                           </p>
-                        </div> 
-                    </div>
-                    </div>
-                    <!-- Add Pagination -->
-                    <div class="swiper-pagination"></div>
-                  </div>
-            </article>
-            <article style="background-color: #ffe0e9;color:black"class="py-5 p-lg-5" id="novedades">
-                <h4 class="text-center">
-                    Novedades
-                </h4>
-                <div class="swiper-container">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide d-flex flex-column justify-content-end text-white text-center" style="background-image:url(./img/1.jpg)">
-                            <div style="background-color: #cc0066 !important; opacity: 0.6" class=" col-11 mx-auto my-2 rounded-pill">
-                                <small class="my-0">
-                                    item 1 
-                                </small>  
-                               <p class="my-0">
-                                     $5000
-                               </p>
-                            </div> 
-                        </div>
-                        <div class="swiper-slide d-flex flex-column justify-content-end text-white text-center" style="background-image:url(./img/2.jpg)">
-                            <div style="background-color: #cc0066 !important; opacity: 0.6" class=" col-11 mx-auto my-2 rounded-pill">
-                                <small class="my-0">
-                                    item 1 
-                                </small>  
-                               <p class="my-0">
-                                     $5000
-                               </p>
-                            </div> 
-                        </div>
-                        <div class="swiper-slide d-flex flex-column justify-content-end text-white text-center" style="background-image:url(./img/3.png)">
-                            <div style="background-color: #cc0066 !important; opacity: 0.6" class=" col-11 mx-auto my-2 rounded-pill">
-                                <small class="my-0">
-                                    item 1 
-                                </small>  
-                               <p class="my-0">
-                                     $5000
-                               </p>
-                            </div> 
-                        </div>
-                    </div>
-                    <!-- Add Pagination -->
-                    <div class="swiper-pagination"></div>
+                      <div class="col-lg-10">
+                        <div class="row row-cols-1 row-cols-md-3 g-4">
+                            <div class="col">
+                              <div class="card h-100" style="border: solid 1px gray;cursor: pointer;">
+                                <img src="./img/1.jpg" class="card-img-top" alt="...">
+                                <div class="card-body text-center">
+                                  <h5 class="card-title">Item</h5>
+                                  <p class="card-text"> $5000</p>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="col">
+                              <div class="card h-100" style="border: solid 1px gray;cursor: pointer;">
+                                <img src="./img/2.jpg" class="card-img-top" alt="...">
+                                <div class="card-body text-center">
+                                    <h5 class="card-title">Item</h5>
+                                    <p class="card-text"> $5000</p>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="col">
+                              <div class="card h-100" style="border: solid 1px gray;cursor: pointer;">
+                                <img src="./img/3.png" class="card-img-top" alt="...">
+                                <div class="card-body text-center">
+                                    <h5 class="card-title">Item</h5>
+                                    <p class="card-text"> $5000</p>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="col">
+                              <div class="card h-100" style="border: solid 1px gray;cursor: pointer;">
+                                <img src="./img/1.jpg" class="card-img-top" alt="...">
+                                <div class="card-body text-center">
+                                    <h5 class="card-title">Item</h5>
+                                    <p class="card-text"> $5000</p>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="col">
+                                <div class="card h-100" style="border: solid 1px gray;cursor: pointer;">
+                                  <img src="./img/3.png" class="card-img-top" alt="...">
+                                  <div class="card-body text-center">
+                                      <h5 class="card-title">Item</h5>
+                                      <p class="card-text"> $5000</p>
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="col">
+                                <div class="card h-100" style="border: solid 1px gray;cursor: pointer;">
+                                  <img src="./img/1.jpg" class="card-img-top" alt="...">
+                                  <div class="card-body text-center">
+                                      <h5 class="card-title">Item</h5>
+                                      <p class="card-text"> $5000</p>
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="col">
+                                <div class="card h-100" style="border: solid 1px gray;cursor: pointer;">
+                                  <img src="./img/3.png" class="card-img-top" alt="...">
+                                  <div class="card-body text-center">
+                                      <h5 class="card-title">Item</h5>
+                                      <p class="card-text"> $5000</p>
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="col">
+                                <div class="card h-100" style="border: solid 1px gray;cursor: pointer;">
+                                  <img src="./img/1.jpg" class="card-img-top" alt="...">
+                                  <div class="card-body text-center">
+                                      <h5 class="card-title">Item</h5>
+                                      <p class="card-text"> $5000</p>
+                                  </div>
+                                </div>
+                              </div>
+                          </div>
+                      </div>
                   </div>
             </article>
         </section>
