--- a/item.html
+++ b/item.html
@@ -51,8 +51,8 @@
                              </a>
                         <ul style="background-color: #cc0066 !important" class="dropdown-menu border border-white py-2" aria-labelledby="navbarDropdownMenuLink">
                             <li><a class="dropdown-item text-white" href="item.html">item1</a></li>
-                            <li><a class="dropdown-item text-white" href="#">item2</a></li>
-                            <li><a class="dropdown-item text-white" href="#">item</a></li>
+                            <li><a class="dropdown-item text-white" href="item.html">item2</a></li>
+                            <li><a class="dropdown-item text-white" href="item.html">item</a></li>
                         </ul>
                         <div class="d-none mx-auto border-lg-top">
                                 
@@ -97,13 +97,13 @@
                             </h5>
                             <ul class="list-unstyled">
                                 <li class="mb-2">
-                                    <a href="" class="text-decoration-none text-dark">Item 1</a>
+                                    <a href="item.html" class="text-decoration-none text-dark">Item 1</a>
                                 </li>
                                 <li class="mb-2">
-                                    <a href="" class="text-decoration-none text-dark">Item 2</a>
+                                    <a href="item.html" class="text-decoration-none text-dark">Item 2</a>
                                 </li>
                                 <li class="mb-2">
-                                    <a href="" class="text-decoration-none text-dark">Item 3</a>
+                                    <a href="item.html" class="text-decoration-none text-dark">Item 3</a>
                                 </li>
                             </ul>
                       </div>
