--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
                              </div>
                         </div>
                         <div class="div-footer">
-                            <a href="#destacados" class="text-white text-decoration-none">
-                                Destacados
+                            <a href="item.html" class="text-white text-decoration-none">
+                                Manicura
                                 
                             </a>    
                             <div class="d-none mx-auto border-lg-top">
@@ -193,8 +193,8 @@
                              </div>
                         </div>
                         <div class="div-footer">
-                            <a href="#novedades" class="text-white text-decoration-none">
-                                Novedades
+                            <a href="item.html" class="text-white text-decoration-none">
+                                Maquillaje
                                 
                             </a>    
                             <div class="d-none mx-auto border-lg-top">
