--- a/item.html
+++ b/item.html
@@ -36,9 +36,9 @@
                         </a>
                         
                         <ul style="background-color: #cc0066 !important" class="dropdown-menu text-white border border-white py-2" aria-labelledby="navbarDropdownMenuLink">
-                          <li><a class="dropdown-item text-white" href="item1.html">item1</a></li>
-                          <li><a class="dropdown-item text-white" href="#">item2</a></li>
-                          <li><a class="dropdown-item text-white" href="#">item</a></li>
+                          <li><a class="dropdown-item text-white" href="item.html">item1</a></li>
+                          <li><a class="dropdown-item text-white" href="item.html">item2</a></li>
+                          <li><a class="dropdown-item text-white" href="item.html">item</a></li>
                         </ul>
                         <div class="d-none mx-auto border-lg-top">
                                 
