--- a/item.html
+++ b/item.html
@@ -91,7 +91,7 @@
                     </ol>
                   </nav>
                   <div  class="d-flex flex-wrap justify-content-between my-5">
-                      <div class=" col-lg-2">
+                      <div class="categorias col-lg-2">
                             <h5>
                                Categorias
                             </h5>
