--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     <div class="col text-center">
                         <strong>Categorias</strong>
                         <div class="div-footer">
-                            <a href="#inicio" class="text-white text-decoration-none">
+                            <a href="index.html" class="text-white text-decoration-none">
                                 Inicio
                                 
                             </a>    
