--- a/item.html
+++ b/item.html
@@ -109,7 +109,7 @@
                       </div>
                       <div class="col-lg-10">
                         <div class="row row-cols-1 row-cols-md-3 g-4">
-                            <div class="col producto">
+                            <div class="col producto1">
                               <div class="card h-100" style="border: solid 1px gray;cursor: pointer;">
                                 <img src="./img/1.jpg" class="card-img-top" alt="...">
                                 <div class="card-body text-center">
@@ -118,7 +118,7 @@
                                 </div>
                               </div>
                             </div>
-                            <div class="col producto">
+                            <div class="col producto2">
                               <div class="card h-100" style="border: solid 1px gray;cursor: pointer;">
                                 <img src="./img/2.jpg" class="card-img-top" alt="...">
                                 <div class="card-body text-center">
@@ -127,7 +127,7 @@
                                 </div>
                               </div>
                             </div>
-                            <div class="col producto">
+                            <div class="col producto3">
                               <div class="card h-100" style="border: solid 1px gray;cursor: pointer;">
                                 <img src="./img/3.png" class="card-img-top" alt="...">
                                 <div class="card-body text-center">
@@ -136,7 +136,7 @@
                                 </div>
                               </div>
                             </div>
-                            <div class="col producto">
+                            <div class="col producto4">
                               <div class="card h-100" style="border: solid 1px gray;cursor: pointer;">
                                 <img src="./img/1.jpg" class="card-img-top" alt="...">
                                 <div class="card-body text-center">
@@ -145,7 +145,7 @@
                                 </div>
                               </div>
                             </div>
-                            <div class="col producto">
+                            <div class="col producto5">
                                 <div class="card h-100" style="border: solid 1px gray;cursor: pointer;">
                                   <img src="./img/3.png" class="card-img-top" alt="...">
                                   <div class="card-body text-center">
@@ -154,7 +154,7 @@
                                   </div>
                                 </div>
                               </div>
-                              <div class="col producto">
+                              <div class="col producto6">
                                 <div class="card h-100" style="border: solid 1px gray;cursor: pointer;">
                                   <img src="./img/1.jpg" class="card-img-top" alt="...">
                                   <div class="card-body text-center">
@@ -163,7 +163,7 @@
                                   </div>
                                 </div>
                               </div>
-                              <div class="col producto">
+                              <div class="col producto7">
                                 <div class="card h-100" style="border: solid 1px gray;cursor: pointer;">
                                   <img src="./img/3.png" class="card-img-top" alt="...">
                                   <div class="card-body text-center">
@@ -172,7 +172,7 @@
                                   </div>
                                 </div>
                               </div>
-                              <div class="col producto">
+                              <div class="col producto8">
                                 <div class="card h-100" style="border: solid 1px gray;cursor: pointer;">
                                   <img src="./img/1.jpg" class="card-img-top" alt="...">
                                   <div class="card-body text-center">
