--- a/item.html
+++ b/item.html
@@ -108,7 +108,7 @@
                             </ul>
                       </div>
                       <div class="col-lg-10">
-                        <div class="row row-cols-1 row-cols-md-3 g-4">
+                        <div class="row row-cols-1 row-cols-md-3 row-cols-xl-4 g-4">
                             <div class="col producto1">
                               <div class="card h-100" style="border: solid 1px gray;cursor: pointer;">
                                 <img src="./img/1.jpg" class="card-img-top" alt="...">
