--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <i style="background-color: #00bb2d;font-size:45px"class="text-white fab fa-whatsapp rounded-circle p-3"></i>
                 </a>  
             </article>
-            <article style="background-color: #ffc1d3; color:black" class="py-5 p-lg-5" id="destacados">
+            <article style="background-color: #ffc1d3; color:#cc0066" class="py-5 p-lg-5" id="destacados">
                 <h4 class="text-center">
                     Destacados
                 </h4>
@@ -125,7 +125,7 @@
                     <div class="swiper-pagination"></div>
                   </div>
             </article>
-            <article style="background-color: #ffe0e9;color:black"class="py-5 p-lg-5" id="novedades">
+            <article style="background-color: #ffe0e9;color:#cc0066"class="py-5 p-lg-5" id="novedades">
                 <h4 class="text-center">
                     Novedades
                 </h4>
