--- a/item.html
+++ b/item.html
@@ -83,11 +83,11 @@
                     <i style="background-color: #00bb2d;font-size:45px"class="text-white fab fa-whatsapp rounded-circle p-3"></i>
                 </a>  
             </article>
-            <article style ="background-color: #ffe0e9; "class="p-5">
+            <article style ="background-color: #ffe0e9; color:#f50857 "class="p-5">
                 <nav  aria-label="breadcrumb">
                     <ol class="breadcrumb">
-                      <li class="breadcrumb-item"><a href="index.html" class="text-dark text-decoration-none">Inicio</a></li>
-                      <li class="breadcrumb-item active" aria-current="page">Item </li>
+                      <li class="breadcrumb-item"><a href="index.html" style="color:#ff40a0 !important"class="text-dark text-decoration-none">Inicio</a></li>
+                      <li class="breadcrumb-item" aria-current="page">Item </li>
                     </ol>
                   </nav>
                   <div  class="d-flex flex-wrap justify-content-between my-5">
@@ -97,20 +97,20 @@
                             </h5>
                             <ul class="list-unstyled">
                                 <li class="mb-2">
-                                    <a href="item.html" class="text-decoration-none text-dark">Item 1</a>
+                                    <a href="item.html" class="text-decoration-none" style="color:#ff40a0 !important">Item 1</a>
                                 </li>
                                 <li class="mb-2">
-                                    <a href="item.html" class="text-decoration-none text-dark">Item 2</a>
+                                    <a href="item.html" class="text-decoration-none" style="color:#ff40a0 !important">Item 2</a>
                                 </li>
                                 <li class="mb-2">
-                                    <a href="item.html" class="text-decoration-none text-dark">Item 3</a>
+                                    <a href="item.html" class="text-decoration-none" style="color:#ff40a0 !important">Item 3</a>
                                 </li>
                             </ul>
                       </div>
                       <div class="col-lg-10">
                         <div class="row row-cols-1 row-cols-md-3 row-cols-xl-4 g-4">
                             <div class="col producto1">
-                              <div class="card h-100" style="border: solid 1px gray;cursor: pointer;">
+                              <div class="card h-100" style="border: solid 1px #fc4aa3;cursor: pointer;">
                                 <img src="./img/1.jpg" class="card-img-top" alt="...">
                                 <div class="card-body text-center">
                                   <h5 class="card-title">Item</h5>
@@ -119,7 +119,7 @@
                               </div>
                             </div>
                             <div class="col producto2">
-                              <div class="card h-100" style="border: solid 1px gray;cursor: pointer;">
+                              <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
                                 <img src="./img/2.jpg" class="card-img-top" alt="...">
                                 <div class="card-body text-center">
                                     <h5 class="card-title">Item</h5>
@@ -128,7 +128,7 @@
                               </div>
                             </div>
                             <div class="col producto3">
-                              <div class="card h-100" style="border: solid 1px gray;cursor: pointer;">
+                              <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
                                 <img src="./img/3.png" class="card-img-top" alt="...">
                                 <div class="card-body text-center">
                                     <h5 class="card-title">Item</h5>
@@ -137,7 +137,7 @@
                               </div>
                             </div>
                             <div class="col producto4">
-                              <div class="card h-100" style="border: solid 1px gray;cursor: pointer;">
+                              <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
                                 <img src="./img/1.jpg" class="card-img-top" alt="...">
                                 <div class="card-body text-center">
                                     <h5 class="card-title">Item</h5>
@@ -146,7 +146,7 @@
                               </div>
                             </div>
                             <div class="col producto5">
-                                <div class="card h-100" style="border: solid 1px gray;cursor: pointer;">
+                                <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
                                   <img src="./img/3.png" class="card-img-top" alt="...">
                                   <div class="card-body text-center">
                                       <h5 class="card-title">Item</h5>
@@ -155,7 +155,7 @@
                                 </div>
                               </div>
                               <div class="col producto6">
-                                <div class="card h-100" style="border: solid 1px gray;cursor: pointer;">
+                                <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
                                   <img src="./img/1.jpg" class="card-img-top" alt="...">
                                   <div class="card-body text-center">
                                       <h5 class="card-title">Item</h5>
@@ -164,7 +164,7 @@
                                 </div>
                               </div>
                               <div class="col producto7">
-                                <div class="card h-100" style="border: solid 1px gray;cursor: pointer;">
+                                <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
                                   <img src="./img/3.png" class="card-img-top" alt="...">
                                   <div class="card-body text-center">
                                       <h5 class="card-title">Item</h5>
@@ -173,7 +173,7 @@
                                 </div>
                               </div>
                               <div class="col producto8">
-                                <div class="card h-100" style="border: solid 1px gray;cursor: pointer;">
+                                <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
                                   <img src="./img/1.jpg" class="card-img-top" alt="...">
                                   <div class="card-body text-center">
                                       <h5 class="card-title">Item</h5>
