agregado productos de manicura

--- a/manicuras.html
+++ b/manicuras.html
@@ -138,77 +138,123 @@
           </div>
           <div class="col-lg-10">
             <div class="row row-cols-1 row-cols-md-3 row-cols-xl-4 g-4">
-              <div class="col producto1">
-                <div class="card h-100" style="border: solid 1px #fc4aa3;cursor: pointer;">
-                  <img src="./img/1.jpg" class="card-img-top" alt="...">
-                  <div class="card-body text-center">
-                    <h5 class="card-title">Item</h5>
-                    <p class="card-text"> $5000</p>
+                <div class="col-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto1">
+                    <div class="card h-100" style="border: solid 1px #fc4aa3;cursor: pointer;">
+                      <img src="./img/productos/manicura/brochas.jpg" class="card-img-top" alt="...">
+                      <div class="card-body text-center">
+                        <h5 class="card-title">Brochas</h5>
+                        <p class="card-text"> $400</p>
+                      </div>
+                    </div>
                   </div>
-                </div>
-              </div>
-              <div class="col producto2">
-                <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
-                  <img src="./img/2.jpg" class="card-img-top" alt="...">
-                  <div class="card-body text-center">
-                    <h5 class="card-title">Item</h5>
-                    <p class="card-text"> $5000</p>
+                  <div class="col-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto2">
+                    <div class="card h-100" style="border: solid 1px #fc4aa3;cursor: pointer;">
+                      <img src="./img/productos/manicura/cajadecoholo.jpg" class="card-img-top" alt="...">
+                      <div class="card-body text-center">
+                        <h5 class="card-title">Caja de decoraciones holograficas</h5>
+                        <p class="card-text"> $650</p>
+                      </div>
+                    </div>
                   </div>
+                  <div class="col-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto3">
+                    <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
+                      <img src="./img/productos/manicura/decoholo.jpg" class="card-img-top" alt="...">
+                      <div class="card-body text-center">
+                        <h5 class="card-title">Decoraciones holograficas por unidad</h5>
+                        <p class="card-text"> $70</p>
+                      </div>
+                    </div>
                 </div>
-              </div>
-              <div class="col producto3">
-                <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
-                  <img src="./img/3.png" class="card-img-top" alt="...">
-                  <div class="card-body text-center">
-                    <h5 class="card-title">Item</h5>
-                    <p class="card-text"> $5000</p>
+                <div class="col-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto4">
+                    <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
+                      <img src="./img/productos/manicura/strass.jpg" class="card-img-top" alt="...">
+                      <div class="card-body text-center">
+                        <h5 class="card-title">Strass</h5>
+                        <p class="card-text"> $350</p>
+                      </div>
+                    </div>
+                </div>
+                <div class="col-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto5">
+                    <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
+                      <img src="./img/productos/manicura/sticker.jpg" class="card-img-top" alt="...">
+                      <div class="card-body text-center">
+                        <h5 class="card-title">Stickers</h5>
+                        <p class="card-text"> $350</p>
+                      </div>
+                    </div>
+                </div>          
+                <div class="col-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto6">
+                    <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
+                      <img src="./img/productos/manicura/polvoespejo2.jpg" class="card-img-top" alt="...">
+                      <div class="card-body text-center">
+                        <h5 class="card-title">Polvo espejo</h5>
+                        <p class="card-text"> $350</p>
+                      </div>
+                    </div>
+                </div>
+                <div class="col-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto7">
+                    <div class="card h-100" style="border: solid 1px #fc4aa3;cursor: pointer;">
+                      <img src="./img/productos/manicura/foil.jpg" class="card-img-top" alt="...">
+                      <div class="card-body text-center">
+                        <h5 class="card-title">Tiras de foil</h5>
+                        <p class="card-text"> $50</p>
+                      </div>
+                    </div>
                   </div>
-                </div>
-              </div>
-              <div class="col producto4">
-                <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
-                  <img src="./img/1.jpg" class="card-img-top" alt="...">
-                  <div class="card-body text-center">
-                    <h5 class="card-title">Item</h5>
-                    <p class="card-text"> $5000</p>
+                  <div class="col-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto8">
+                    <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
+                      <img src="./img/productos/manicura/cajafoil.jpg" class="card-img-top" alt="...">
+                      <div class="card-body text-center">
+                        <h5 class="card-title">Caja de foils</h5>
+                        <p class="card-text"> $500</p>
+                      </div>
+                    </div>
                   </div>
-                </div>
-              </div>
-              <div class="col producto5">
-                <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
-                  <img src="./img/3.png" class="card-img-top" alt="...">
-                  <div class="card-body text-center">
-                    <h5 class="card-title">Item</h5>
-                    <p class="card-text"> $5000</p>
+                  <div class="col-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto9">
+                    <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
+                      <img src="./img/productos/manicura/pegamento.jpg" class="card-img-top" alt="...">
+                      <div class="card-body text-center">
+                        <h5 class="card-title">Pegamento para foil</h5>
+                        <p class="card-text"> $250</p>
+                      </div>
+                    </div>
                   </div>
-                </div>
-              </div>
-              <div class="col producto6">
-                <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
-                  <img src="./img/1.jpg" class="card-img-top" alt="...">
-                  <div class="card-body text-center">
-                    <h5 class="card-title">Item</h5>
-                    <p class="card-text"> $5000</p>
+                  <div class="col-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto10">
+                    <div class="card h-100" style="border: solid 1px #fc4aa3;cursor: pointer;">
+                      <img src="./img//productos/manicura/lima.jpg" class="card-img-top" alt="...">
+                      <div class="card-body text-center">
+                        <h5 class="card-title">Lima opi</h5>
+                        <p class="card-text"> $140</p>
+                      </div>
+                    </div>
                   </div>
-                </div>
-              </div>
-              <div class="col producto7">
-                <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
-                  <img src="./img/3.png" class="card-img-top" alt="...">
-                  <div class="card-body text-center">
-                    <h5 class="card-title">Item</h5>
-                    <p class="card-text"> $5000</p>
+                  <div class="col-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto11">
+                    <div class="card h-100" style="border: solid 1px #fc4aa3;cursor: pointer;">
+                      <img src="./img/productos/manicura/limpiauñas.jpg" class="card-img-top" alt="...">
+                      <div class="card-body text-center">
+                        <h5 class="card-title">Limpia uñas</h5>
+                        <p class="card-text"> $250</p>
+                      </div>
+                    </div>
                   </div>
-                </div>
-              </div>
-              <div class="col producto8">
-                <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
-                  <img src="./img/1.jpg" class="card-img-top" alt="...">
-                  <div class="card-body text-center">
-                    <h5 class="card-title">Item</h5>
-                    <p class="card-text"> $5000</p>
+                  <div class="col-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto12">
+                    <div class="card h-100" style="border: solid 1px #fc4aa3;cursor: pointer;">
+                      <img src="./img/productos/manicura/repujador2.jpg" class="card-img-top" alt="...">
+                      <div class="card-body text-center">
+                        <h5 class="card-title">Repujador</h5>
+                        <p class="card-text"> $350</p>
+                      </div>
+                    </div>
                   </div>
-                </div>
+                  <div class="col-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto13">
+                    <div class="card h-100" style="border: solid 1px #fc4aa3;cursor: pointer;">
+                      <img src="./img/productos/manicura/bloques.jpg" class="card-img-top" alt="...">
+                      <div class="card-body text-center">
+                        <h5 class="card-title">Taco</h5>
+                        <p class="card-text"> $180</p>
+                      </div>
+                    </div>
+                  </div>
               </div>
             </div>
           </div>
