--- a/decoraciones.html
+++ b/decoraciones.html
@@ -49,7 +49,6 @@
                   <li><a class="dropdown-item text-white" href="limas.html">Limas</a></li>
                   <li><a class="dropdown-item text-white" href="limpiadordeuñas.html">Limpiador de uñas</a></li>
                   <li><a class="dropdown-item text-white" href="repujador.html">Repujador</a></li>
-                  
                   <li><a class="dropdown-item text-white" href="taco.html">Taco</a></li>
                 </ul>
                 <div class="d-none mx-auto border-lg-top">
@@ -102,7 +101,7 @@
           <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="index.html" style="color:#ff40a0 !important"
                 class="text-dark text-decoration-none">Inicio</a></li>
-            <li class="breadcrumb-item" aria-current="page">Item </li>
+            <li class="breadcrumb-item" aria-current="page">Decoraciones </li>
           </ol>
         </nav>
         <div class="d-flex flex-wrap justify-content-between my-5">
@@ -138,78 +137,51 @@
           </div>
           <div class="col-lg-10">
             <div class="row row-cols-1 row-cols-md-3 row-cols-xl-4 g-4">
-              <div class="col producto1">
+              <div class="col-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto1">
                 <div class="card h-100" style="border: solid 1px #fc4aa3;cursor: pointer;">
-                  <img src="./img/1.jpg" class="card-img-top" alt="...">
+                  <img src="./img/productos/manicura/cajadecoholo.jpg" class="card-img-top" alt="...">
                   <div class="card-body text-center">
-                    <h5 class="card-title">Item</h5>
-                    <p class="card-text"> $5000</p>
+                    <h5 class="card-title">Caja de decoraciones holograficas</h5>
+                    <p class="card-text"> $650</p>
                   </div>
                 </div>
               </div>
-              <div class="col producto2">
+              <div class="col-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto2">
                 <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
-                  <img src="./img/2.jpg" class="card-img-top" alt="...">
+                  <img src="./img/productos/manicura/decoholo.jpg" class="card-img-top" alt="...">
                   <div class="card-body text-center">
-                    <h5 class="card-title">Item</h5>
-                    <p class="card-text"> $5000</p>
+                    <h5 class="card-title">Decoraciones holograficas por unidad</h5>
+                    <p class="card-text"> $70</p>
                   </div>
                 </div>
-              </div>
-              <div class="col producto3">
+            </div>
+            <div class="col-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto3">
                 <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
-                  <img src="./img/3.png" class="card-img-top" alt="...">
+                  <img src="./img/productos/manicura/strass.jpg" class="card-img-top" alt="...">
                   <div class="card-body text-center">
-                    <h5 class="card-title">Item</h5>
-                    <p class="card-text"> $5000</p>
+                    <h5 class="card-title">Strass</h5>
+                    <p class="card-text"> $350</p>
                   </div>
                 </div>
-              </div>
-              <div class="col producto4">
+            </div>
+            <div class="col-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto4">
                 <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
-                  <img src="./img/1.jpg" class="card-img-top" alt="...">
+                  <img src="./img/productos/manicura/sticker.jpg" class="card-img-top" alt="...">
                   <div class="card-body text-center">
-                    <h5 class="card-title">Item</h5>
-                    <p class="card-text"> $5000</p>
+                    <h5 class="card-title">Stickers</h5>
+                    <p class="card-text"> $350</p>
                   </div>
                 </div>
-              </div>
-              <div class="col producto5">
+            </div>          
+            <div class="col-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto5">
                 <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
-                  <img src="./img/3.png" class="card-img-top" alt="...">
+                  <img src="./img/productos/manicura/polvoespejo2.jpg" class="card-img-top" alt="...">
                   <div class="card-body text-center">
-                    <h5 class="card-title">Item</h5>
-                    <p class="card-text"> $5000</p>
+                    <h5 class="card-title">Polvo espejo</h5>
+                    <p class="card-text"> $350</p>
                   </div>
                 </div>
-              </div>
-              <div class="col producto6">
-                <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
-                  <img src="./img/1.jpg" class="card-img-top" alt="...">
-                  <div class="card-body text-center">
-                    <h5 class="card-title">Item</h5>
-                    <p class="card-text"> $5000</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col producto7">
-                <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
-                  <img src="./img/3.png" class="card-img-top" alt="...">
-                  <div class="card-body text-center">
-                    <h5 class="card-title">Item</h5>
-                    <p class="card-text"> $5000</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col producto8">
-                <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
-                  <img src="./img/1.jpg" class="card-img-top" alt="...">
-                  <div class="card-body text-center">
-                    <h5 class="card-title">Item</h5>
-                    <p class="card-text"> $5000</p>
-                  </div>
-                </div>
-              </div>
+            </div>
             </div>
           </div>
         </div>
