--- a/decoraciones.html
+++ b/decoraciones.html
@@ -137,7 +137,7 @@
           </div>
           <div class="col-lg-10">
             <div class="row row-cols-1 row-cols-md-3 row-cols-xl-4 g-4">
-              <div class="col-10 mx-auto mx-md-0 col-md-4 col-xl-3 producto1">
+              <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto1">
                 <div class="card h-100" style="border: solid 1px #fc4aa3;cursor: pointer;">
                   <img src="./img/productos/manicura/cajadecoholo.jpg" class="card-img-top" alt="...">
                   <div class="card-body text-center">
@@ -146,7 +146,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-10 mx-auto mx-md-0 col-md-4 col-xl-3 producto2">
+              <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto2">
                 <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
                   <img src="./img/productos/manicura/decoholo.jpg" class="card-img-top" alt="...">
                   <div class="card-body text-center">
@@ -155,7 +155,7 @@
                   </div>
                 </div>
             </div>
-            <div class="col-10 mx-auto mx-md-0 col-md-4 col-xl-3 producto3">
+            <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto3">
                 <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
                   <img src="./img/productos/manicura/strass.jpg" class="card-img-top" alt="...">
                   <div class="card-body text-center">
@@ -164,7 +164,7 @@
                   </div>
                 </div>
             </div>
-            <div class="col-10 mx-auto mx-md-0 col-md-4 col-xl-3 producto4">
+            <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto4">
                 <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
                   <img src="./img/productos/manicura/sticker.jpg" class="card-img-top" alt="...">
                   <div class="card-body text-center">
@@ -173,7 +173,7 @@
                   </div>
                 </div>
             </div>          
-            <div class="col-10 mx-auto mx-md-0 col-md-4 col-xl-3 producto5">
+            <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto5">
                 <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
                   <img src="./img/productos/manicura/polvoespejo2.jpg" class="card-img-top" alt="...">
                   <div class="card-body text-center">
