--- a/limas.html
+++ b/limas.html
@@ -138,7 +138,7 @@
           </div>
           <div class="col-lg-10">
             <div class="row row-cols-1 row-cols-md-3 row-cols-xl-4 g-4">
-              <div class="col-10 mx-auto mx-md-0  col-md-4 col-xl-3 producto1">
+              <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto1">
                 <div class="card h-100" style="border: solid 1px #fc4aa3;cursor: pointer;">
                   <img src="./img//productos/manicura/lima.jpg" class="card-img-top" alt="...">
                   <div class="card-body text-center">
