--- a/manicuras.html
+++ b/manicuras.html
@@ -138,7 +138,7 @@
           </div>
           <div class="col-lg-10">
             <div class="row row-cols-1 row-cols-md-3 row-cols-xl-4 g-4">
-                <div class="col-10 mx-auto mx-md-0 col-md-4 col-xl-3 producto1">
+                <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto1">
                     <div class="card h-100" style="border: solid 1px #fc4aa3;cursor: pointer;">
                       <img src="./img/productos/manicura/brochas.jpg" class="card-img-top" alt="...">
                       <div class="card-body text-center">
@@ -147,7 +147,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-10 mx-auto mx-md-0 col-md-4 col-xl-3 producto2">
+                  <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto2">
                     <div class="card h-100" style="border: solid 1px #fc4aa3;cursor: pointer;">
                       <img src="./img/productos/manicura/cajadecoholo.jpg" class="card-img-top" alt="...">
                       <div class="card-body text-center">
@@ -156,7 +156,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-10 mx-auto mx-md-0 col-md-4 col-xl-3 producto3">
+                  <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto3">
                     <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
                       <img src="./img/productos/manicura/decoholo.jpg" class="card-img-top" alt="...">
                       <div class="card-body text-center">
@@ -165,7 +165,7 @@
                       </div>
                     </div>
                 </div>
-                <div class="col-10 mx-auto mx-md-0 col-md-4 col-xl-3 producto4">
+                <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto4">
                     <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
                       <img src="./img/productos/manicura/strass.jpg" class="card-img-top" alt="...">
                       <div class="card-body text-center">
@@ -174,7 +174,7 @@
                       </div>
                     </div>
                 </div>
-                <div class="col-10 mx-auto mx-md-0 col-md-4 col-xl-3 producto5">
+                <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto5">
                     <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
                       <img src="./img/productos/manicura/sticker.jpg" class="card-img-top" alt="...">
                       <div class="card-body text-center">
@@ -183,7 +183,7 @@
                       </div>
                     </div>
                 </div>          
-                <div class="col-10 mx-auto mx-md-0 col-md-4 col-xl-3 producto6">
+                <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto6">
                     <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
                       <img src="./img/productos/manicura/polvoespejo2.jpg" class="card-img-top" alt="...">
                       <div class="card-body text-center">
@@ -192,7 +192,7 @@
                       </div>
                     </div>
                 </div>
-                <div class="col-10 mx-auto mx-md-0 col-md-4 col-xl-3 producto7">
+                <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto7">
                     <div class="card h-100" style="border: solid 1px #fc4aa3;cursor: pointer;">
                       <img src="./img/productos/manicura/foil.jpg" class="card-img-top" alt="...">
                       <div class="card-body text-center">
@@ -201,7 +201,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-10 mx-auto mx-md-0 col-md-4 col-xl-3 producto8">
+                  <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto8">
                     <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
                       <img src="./img/productos/manicura/cajafoil.jpg" class="card-img-top" alt="...">
                       <div class="card-body text-center">
@@ -210,7 +210,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-10 mx-auto mx-md-0 col-md-4 col-xl-3 producto9">
+                  <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto9">
                     <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
                       <img src="./img/productos/manicura/pegamento.jpg" class="card-img-top" alt="...">
                       <div class="card-body text-center">
@@ -219,7 +219,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-10 mx-auto mx-md-0 col-md-4 col-xl-3 producto10">
+                  <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto10">
                     <div class="card h-100" style="border: solid 1px #fc4aa3;cursor: pointer;">
                       <img src="./img//productos/manicura/lima.jpg" class="card-img-top" alt="...">
                       <div class="card-body text-center">
@@ -228,7 +228,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-10 mx-auto mx-md-0 col-md-4 col-xl-3 producto11">
+                  <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto11">
                     <div class="card h-100" style="border: solid 1px #fc4aa3;cursor: pointer;">
                       <img src="./img/productos/manicura/limpiauñas.jpg" class="card-img-top" alt="...">
                       <div class="card-body text-center">
@@ -237,7 +237,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-10 mx-auto mx-md-0 col-md-4 col-xl-3 producto12">
+                  <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto12">
                     <div class="card h-100" style="border: solid 1px #fc4aa3;cursor: pointer;">
                       <img src="./img/productos/manicura/repujador2.jpg" class="card-img-top" alt="...">
                       <div class="card-body text-center">
@@ -246,7 +246,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-10 mx-auto mx-md-0 col-md-4 col-xl-3 producto13">
+                  <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto13">
                     <div class="card h-100" style="border: solid 1px #fc4aa3;cursor: pointer;">
                       <img src="./img/productos/manicura/bloques.jpg" class="card-img-top" alt="...">
                       <div class="card-body text-center">
