--- a/index.html
+++ b/index.html
@@ -86,12 +86,27 @@
                     <i style="background-color: #00bb2d;font-size:45px"class="text-white fab fa-whatsapp rounded-circle p-3"></i>
                 </a>  
             </article>
+            <article>
+                <div style ="background-color: #fa55a8; "class="text-white p-5">
+                    <i class="fas fa-exclamation"></i> Por el momento la forma de pago es en efectivo
+                </div>   
+            </article>
+            <article>
+                <div style ="background-color: #ff40a0; "class="text-white p-5">
+                    <i class="fas fa-exclamation"></i> Realizamos ventas mayoristas y minoristas, consulte los precios
+                </div>   
+            </article>
+            <article>
+                <div style ="background-color: #fa2d94; "class="text-white p-5">
+                    <i class="fas fa-exclamation"></i> Todo lo que hay en el catalogo es lo disponible
+                </div>   
+            </article>
             <article style="background-color: #ffc1d3; color:#cc0066" class="py-5 p-lg-5" id="destacados">
                 <h4 class="text-center">
                     Destacados
                 </h4>
                 <div class="swiper-container">
-                    <div class="swiper-wrapper">
+                    <div class="swiper-wrapper mt-3">
                       <div class="swiper-slide d-flex flex-column justify-content-end text-white text-center" style="background-image:url(./img/productos/manicura/lima.jpg)">
                         <div style="background-color: #cc0066 !important; opacity: 0.9" class=" col-11 mx-auto my-2 rounded-pill">
                             <small class="my-0">
@@ -190,10 +205,7 @@
                   </div>
             </article>
         </section>
-        <footer>
-            <div style ="background-color: #ff40a0; "class="text-white px-5 py-3">
-                <i class="fas fa-exclamation"></i> Por el momento la forma de pago es en efectivo
-            </div>          
+        <footer>       
             <div id="footer" style="background-color: #cc0066 !important" class="d-flex flex-wrap justify-content-between p-3 px-xl-3 py-xl-4 text-white">
                     <div class="col text-center">
                         <strong>Categorias</strong>
