--- a/foil.html
+++ b/foil.html
@@ -172,8 +172,14 @@
       </article>
     </section>
     <footer>
-      <div style="background-color: #ff40a0; " class="text-white px-5 py-3">
+      <div style="background-color: #fa55a8; " class="text-white p-5">
         <i class="fas fa-exclamation"></i> Por el momento la forma de pago es en efectivo
+      </div>
+      <div style="background-color: #ff40a0; " class="text-white p-5">
+        <i class="fas fa-exclamation"></i> Realizamos ventas mayoristas y minoristas, consulte los precios
+      </div>
+      <div style="background-color: #fa2d94; " class="text-white p-5">
+        <i class="fas fa-exclamation"></i> Todo lo que hay en el catalogo es lo disponible
       </div>
       <div id="footer" style="background-color: #cc0066 !important"
         class="d-flex flex-wrap justify-content-between p-3 px-xl-3 py-xl-4 text-white">
