--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         <div class="swiper-slide d-flex flex-column justify-content-end text-white text-center" style="background-image:url(./img/productos/manicura/polvoespejo.jpg)">
                             <div style="background-color: #cc0066 !important; opacity: 0.9" class=" col-11 mx-auto my-2 rounded-pill">
                                 <small class="my-0">
-                                    Polvo espejo
+                                    Polvo espejo por unidad
                                 </small>  
                                <p class="my-0">
                                      $350
@@ -182,7 +182,7 @@
                         <div class="swiper-slide d-flex flex-column justify-content-end text-white text-center" style="background-image:url(./img/productos/manicura/sticker.jpg)">
                             <div style="background-color: #cc0066 !important; opacity: 0.9" class=" col-11 mx-auto my-2 rounded-pill">
                                 <small class="my-0">
-                                    Stickers 
+                                    Stickers por unidad
                                 </small>  
                                <p class="my-0">
                                      $30
