--- a/manicuras.html
+++ b/manicuras.html
@@ -178,7 +178,7 @@
                     <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
                       <img src="./img/productos/manicura/sticker.jpg" class="card-img-top" alt="...">
                       <div class="card-body text-center">
-                        <h5 class="card-title">Stickers</h5>
+                        <h5 class="card-title">Stickers por unidad</h5>
                         <p class="card-text"> $30</p>
                       </div>
                     </div>
@@ -187,7 +187,7 @@
                     <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
                       <img src="./img/productos/manicura/polvoespejo2.jpg" class="card-img-top" alt="...">
                       <div class="card-body text-center">
-                        <h5 class="card-title">Polvo espejo</h5>
+                        <h5 class="card-title">Polvo espejo por unidad</h5>
                         <p class="card-text"> $350</p>
                       </div>
                     </div>
