--- a/repujador.html
+++ b/repujador.html
@@ -142,7 +142,7 @@
                 <div class="card h-100" style="border: solid 1px #fc4aa3;cursor: pointer;">
                   <img src="./img/productos/manicura/repujador2.jpg" class="card-img-top" alt="...">
                   <div class="card-body text-center">
-                    <h5 class="card-title">Repujador</h5>
+                    <h5 class="card-title">Repujador por unidad</h5>
                     <p class="card-text"> $350</p>
                   </div>
                 </div>
