--- a/manicuras.html
+++ b/manicuras.html
@@ -223,7 +223,7 @@
                     <div class="card h-100" style="border: solid 1px #fc4aa3;cursor: pointer;">
                       <img src="./img//productos/manicura/lima.jpg" class="card-img-top" alt="...">
                       <div class="card-body text-center">
-                        <h5 class="card-title">Lima opi</h5>
+                        <h5 class="card-title">Lima opi por unidad</h5>
                         <p class="card-text"> $140</p>
                       </div>
                     </div>
@@ -250,7 +250,7 @@
                     <div class="card h-100" style="border: solid 1px #fc4aa3;cursor: pointer;">
                       <img src="./img/productos/manicura/bloques.jpg" class="card-img-top" alt="...">
                       <div class="card-body text-center">
-                        <h5 class="card-title">Taco</h5>
+                        <h5 class="card-title">Taco por unidad</h5>
                         <p class="card-text"> $180</p>
                       </div>
                     </div>
