--- a/taco.html
+++ b/taco.html
@@ -142,7 +142,7 @@
                 <div class="card h-100" style="border: solid 1px #fc4aa3;cursor: pointer;">
                   <img src="./img/productos/manicura/bloques.jpg" class="card-img-top" alt="...">
                   <div class="card-body text-center">
-                    <h5 class="card-title">Taco</h5>
+                    <h5 class="card-title">Taco por unidad</h5>
                     <p class="card-text"> $180</p>
                   </div>
                 </div>
