--- a/limpiadordeuñas.html
+++ b/limpiadordeuñas.html
@@ -142,7 +142,7 @@
                 <div class="card h-100" style="border: solid 1px #fc4aa3;cursor: pointer;">
                   <img src="./img/productos/manicura/limpiauñas.jpg" class="card-img-top" alt="...">
                   <div class="card-body text-center">
-                    <h5 class="card-title">Limpia uñas</h5>
+                    <h5 class="card-title">Limpia uñas por unidad</h5>
                     <p class="card-text"> $250</p>
                   </div>
                 </div>
